--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
               <artifactId>maven-compiler-plugin</artifactId>
               <version>2.3.2</version>
               <configuration>
-                  <source>1.7</source>
-                  <target>1.7</target>
+                  <source>1.8</source>
+                  <target>1.8</target>
               </configuration>
           </plugin>
       </plugins>
@@ -31,7 +31,7 @@
     </repository>
     <repository>
       <id>elmakers</id>
-      <url>http://maven.elmakers.com/repository</url>
+      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
     </repository>
   </repositories>
   <dependencies>
@@ -41,5 +41,17 @@
       <version>1.8.7-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>net.samagames</groupId>
+	  <artifactId>SamaGamesAPI</artifactId>
+	  <version>1.0.0-SNAPSHOT</version>
+	  <scope>provided</scope>
+	  <exclusions>
+	    <exclusion>
+	      <groupId>*</groupId>
+	      <artifactId>*</artifactId>
+	    </exclusion>
+	  </exclusions>
+	</dependency>
   </dependencies>
 </project>
