Bug changes, sorry. Players balls = Slime, Reduce Max Static cells limit, Working with real API + Hydro, Changed game displayname

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,4 +2,5 @@ name: AgarMC
 description: Eat.
 main: net.lnfinity.AgarMC.AgarMC
 version: 1.0
-author: "6infinity8"
+author: 6infinity8
+depend: [SamaGamesAPI]
