--- a/plugin.yml
+++ b/plugin.yml
@@ -4,3 +4,8 @@ main: net.lnfinity.AgarMC.AgarMC
 version: 1.0
 author: 6infinity8
 depend: [SamaGamesAPI]
+
+commands:
+  game:
+    description:
+    usage:
